[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmmule"
version = "0.1.1"
authors = [{name = "Yohan de Rose", email = "yohan@aapstaart.com"}]
description = "Lightweight mule framework."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "ddgs==9.9.3",
    "markdownify==1.2.0",
    "lxml>=6.0.0",
    "sqlalchemy==2.0.45",
    "pgvector==0.4.2",
    "asyncpg==0.31.0"
]

[tool.hatch.build]
packages = ["lmmule"]
